--- a/kanbun.cabal
+++ b/kanbun.cabal
@@ -16,6 +16,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                    ,  Parser
+                    ,  Ast
   build-depends:       base >= 4.7 && < 5
                      , parsec
   default-language:    Haskell2010
@@ -34,6 +36,8 @@ test-suite kanbun-test
   main-is:             Spec.hs
   build-depends:       base
                      , kanbun
+                     , hspec
+                     , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
