--- a/kanbun.cabal
+++ b/kanbun.cabal
@@ -37,6 +37,7 @@ test-suite kanbun-test
   build-depends:       base
                      , kanbun
                      , hspec
+                     , parsec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
