--- a/kanbun.cabal
+++ b/kanbun.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Lib
                     ,  Parser
                     ,  Ast
+                    ,  Transpiler
   build-depends:       base >= 4.7 && < 5
                      , parsec
   default-language:    Haskell2010
