--- a/kanbun.cabal
+++ b/kanbun.cabal
@@ -29,6 +29,10 @@ executable kanbun
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , kanbun
+  if impl(haste)
+    build-depends:     haste-lib >= 0.5 && < 0.6
+  else
+    build-depends:     haste-compiler >= 0.5 && < 0.6
   default-language:    Haskell2010
 
 test-suite kanbun-test
