--- a/CoCaml.cabal
+++ b/CoCaml.cabal
@@ -1,14 +1,14 @@
-name:                kanbun
+name:                CoCaml
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            https://github.com/githubuser/kanbun#readme
-license:             BSD3
+homepage:            https://github.com/wass80/CoCaml#readme
+license:             MIT
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
-category:            Web
+author:              wass80
+maintainer:          wasss80@gmail.com
+copyright:           2016
+category:            Compiler
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
@@ -23,12 +23,12 @@ library
                      , parsec
   default-language:    Haskell2010
 
-executable kanbun
+executable cocaml
   hs-source-dirs:      app
-  main-is:             Main.hs
+  main-is:             CLI.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , kanbun
+                     , CoCaml
   if impl(haste)
     build-depends:     haste-lib >= 0.5 && < 0.6
   else
@@ -40,7 +40,7 @@ test-suite kanbun-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , kanbun
+                     , CoCaml
                      , hspec
                      , parsec
                      , QuickCheck
